# rs-zips2jsons2zip

./: .gitignore  Cargo.toml  README.md  doc-web.sh  watch.sh
example/basic/: Cargo.toml  basic.wasm  build-wasi.sh  run.sh
example/basic/sample.d/: z0j0.json  z0j1.json  z1j0.json  z1j1.json
example/basic/src/: main.rs
src/: lib.rs
