[package]
name = "rs-zips2jsons2zip"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.zip]
version = "3.0.0"
default-features = false
features = [
]

[dependencies.serde_json]
version = "1.0.140"
default-features = false
features = [
	"std",
]

[dependencies.flate2]
version = "1.1.1"
default-features = false
features = [
	"rust_backend",
]
